MMA-5424 opprydder ubrukt varsel og dokumenthenvendelse og la til itest